    sdcard [automount] = yes             Automatically mount SD CARD on insertion
- Boot: store & send crash debug info (*-OVM-DebugCrash records)
- Wifi: Increase scan responsiveness (60 seconds -> 10, on first scan)
- Factory reset by SD file "factoryreset.txt" or pushing SW2 for 10 seconds
    Note: SW2 method needs removing any SD card inserted.
- Miscellaneous bug fixes and enhancements

2018-04-07 MWJ  3.1.003  OTA release
- Production build configurations

2018-04-07 MWJ  3.1.002  OTA release
- Nissan Leaf: Various enhancements:
  Store hx in a metric, SoH in soh based on configurable new car Ah
  Adjust constants
  Store gids in a metric
  Make range calcuations configurable
  Calculate range in km
  Decode odometer and odometer units
- SSH: Increase scp size limit to 10MB
- Console: Show usage line if non-empty with optional subcommands
- Module: Add quick-and-dirty optional module task stack listing
- SIMCOM: Add ppp shutdown msg, on response from the ppp task
- Housekeeping: Move ticker.* events to housekeeping task context
- SIMCOM: Fix to ppp disconnect handler, to reconnect in LWIP tiT task context
- Twizy v0.14: battery cell monitoring web UI
- Webserver: dashboard
- Web UI: fullscreen mode

2018-03-25 MWJ  3.1.001  OTA release
- Add task state to 'module tasks' output
- Avoid SPIRAM being lumped in with DRAM in 'module memory' output
- Wifi: Make 'wifi scan' command block, and show nice summary of
  discovered access points
- Show firmware version and hardware info on console startup
- Show hidden SSIDs as <HIDDEN> in wifi scan
- Add logging, with reason, for some wifi events
- WIFI refactor; use pcp to power on/off wifi driver, and then normal
  wifi state to control driver mode changes. Improvements to wifi
  stability and compatibility.
- Twizy v0.13: kickdown implementation, throttle display
- Provide a 'test watchdog' command to test watchdog timers
- Initialise watchdog timer to start, and reboot if watchdog timeout